# air-quallity-index

./: CMakeLists.txt  main.cpp
factories/: json_serializer_nlohmann_aqi_factory.h  jsonserializernlohmannaqifactory.h
models/: models.h
serialization/: json_serialization.h
serialization/nlohmann/: IaqiSerializer.h  MetricsSerializer.h  ParamAdapterDSerializer.h  TimeSerializer.h  attributionsserializer.h  cityserialization.h  cityserializer.h  debugserialization.h  debugserializer.h  forecastserializer.h  iaqiserializer.h  jsonserializernlohmann.h  paramadapterdserializer.h  responseapiserializer.h
serialization/nlohmann/serializers/: attributionsserializer.cpp  dailyserializer.h  dataserializer.h  forecastserializer.h  jsonserializernlohmann.cpp  jsonserializernlohmann.h  metricsserializer.h  timeserializer.h
